# PythonAIAgent

./: .gitignore  README.md  mcp_servers.json  pyproject.toml
agent/: __init__.py  __main__.py  cli.py  config.py  formatter.py  llm_client.py  mcp_client.py  repl.py  tools.py
misc/: deferred_tool_demo.py
rag/: main.py  test.py
tests/: test_cli.py  test_config.py  test_formatter.py  test_llm_client.py  test_mcp_client.py  test_repl.py  test_tools.py
